tests/init_state/cfg_shape/out_ref_unfulfilled_on_return_arm_leaks.err.expected
error: at 7:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry__to__b_arm': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 7 |     switchEnum(e) [A: a_arm, B: b_arm]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
   |
 5 | fn f(r: &out i64, e: E) {
   |      ^^^^^^^^^^^
